# mtools

./: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: main.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
views/: .gitignore  .prettierrc  index.html  package.json  pnpm-lock.yaml
views/src/: app.vue  dom.js  event.js  ipc.js  logo.vue  main.js  main.vue
