[package]
name = "mtools"
version = "0.0.1"
edition = "2021"

[dependencies]
tao = "0.32.8"
wry = "0.50.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.dev]
incremental = true

[profile.release]
lto = true
strip = true
panic = "abort"
opt-level = "s"
codegen-units = 1